[package]
name = "w2m"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = {version = "4.0", features = ["derive"]}
inquire = { version = "0.6.0", features = ["date"] }
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
scraper = "0.15.0"
tokio = { version = "1", features = ["full"] }
