[package]
name = "when2meet-cli"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Abhishek More <abhimore74@gmail.com>"]
homepage = "https://liqr.vercel.app"
repository = "https://github.com/Abhishek-More/when2meet-cli"
readme = "README.md"
keywords = ["when2meet", "schedule", "productivity", "meeting", "planner"]
categories =["command-line-utilities"]
description = """
A lightweight CLI to rapidly generate When2Meet Forms 
"""

[[bin]]
name = "w2m"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = {version = "4.0", features = ["derive"]}
inquire = { version = "0.6.0", features = ["date"] }
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
scraper = "0.15.0"
tokio = { version = "1", features = ["full"] }
